--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,14 @@
             [formControlName]="'username'"
             class="form-control"
           />
+          <span
+            class="help-block"
+            *ngIf="
+              !signupForm.get('username').valid &&
+              signupForm.get('username').touched
+            "
+            >Please enter a valid user name!</span
+          >
         </div>
         <div class="form-group">
           <label for="email">email</label>
@@ -19,6 +27,13 @@
             formControlName="email"
             class="form-control"
           />
+          <span
+            class="help-block"
+            *ngIf="
+              !signupForm.get('email').valid && signupForm.get('email').touched
+            "
+            >Please enter a valid email!</span
+          >
         </div>
         <div class="radio" *ngFor="let gender of genders">
           <label>
@@ -29,6 +44,9 @@
         </div>
         <button class="btn btn-primary" type="submit">Submit</button>
       </form>
+      <span class="help-block" *ngIf="!signupForm.valid && signupForm.touched"
+        >Please enter a valid form data</span
+      >
     </div>
   </div>
 </div>
