--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,8 +17,20 @@
                 !signupForm.get('userData.username').valid &&
                 signupForm.get('userData.username').touched
               "
-              >Please enter a valid user name!</span
             >
+              <span
+                class="help-block"
+                *ngIf="
+                  signupForm.get('userData.username').errors['nameIsForbidden']
+                "
+                >Please enter a valid user name!</span
+              >
+              <span
+                class="help-block"
+                *ngIf="signupForm.get('userData.username').errors['required']"
+                >Please enter a user name!</span
+              >
+            </span>
           </div>
           <div class="form-group">
             <label for="email">email</label>
